Centred Categories and Added Bits Logo

--- a/src/Components/Static/Home.css
+++ b/src/Components/Static/Home.css
@@ -34,7 +34,7 @@
   font-size: 3vw;
   z-index: 1; 
   position: absolute !important; 
-  left: 70vh;
+  left: 77vh;
   top: 10vw;
   
 }
@@ -43,7 +43,7 @@
   z-index: 1; 
   font-size: 2vw; 
   position: absolute !important; 
-  left: 55vh;
+  left: 61vh;
   top:17vw;
 }
 
@@ -69,4 +69,5 @@ img.home-image{
 }
 .below{
   max-width: fit-content;
+  padding-left: 5rem;
 }
